--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "react": "^16.11.0",
+    "react-async-hook": "^3.6.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2"
   }
