Add tests for cached getBondsData

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "rollup -c -w",
     "lint-check": "prettier ./**/**.{js,jsx,ts,tsx,json,html} --check && eslint .",
     "lint-fix": "prettier ./**/**.{js,jsx,ts,tsx,json,html} --write && eslint . --fix",
-    "test": "jest"
+    "test": "jest --passWithNoTests"
   },
   "author": "kinrany",
   "license": "MPL-2.0",
